# transformer

./: .gitignore  LICENSE  Lightning.ipynb  LightningHuggingface.ipynb  LightningIWSLT2017.ipynb  LightningSynth.ipynb  README.md  pyproject.toml  setup.cfg  text.py
src/lightning/: __init__.py  embeddings.py  lightningseq2seq.py  logdistributions.py  paddingmask.py  positionalencoding.py  scheduler.py  seq2seqloss.py  synth.py  transformer.py  transformermodel.py  translation.py  vocab.py
src/transformer/: __init__.py  attention.py  batch.py  clones.py  decoder.py  decoderlayer.py  embeddings.py  encoder.py  encoderdecoder.py  encoderlayer.py  generator.py  greedydecode.py  labelsmoothing.py  layernorm.py  makemodel.py  multiheadedattention.py  noamopt.py  positionalencoding.py  positionwisefeedforward.py  runepoch.py  simplelosscompute.py  sublayerconnection.py  subsequentmask.py  syntheticdata.py  text.py
tests/test_lightning/: test_transformer.py
tests/test_transformer/: test_attention.py  test_batch.py  test_clones.py  test_decoder.py  test_decoderlayer.py  test_embeddings.py  test_encoder.py  test_encoderdecoder.py  test_encoderlayer.py  test_generator.py  test_labelsmoothing.py  test_layernorm.py  test_multiheadedattention.py  test_noamopt.py  test_positionalencoding.py  test_positionwisefeedforward.py  test_simplelosscompute.py  test_sublayerconnection.py  test_subsequentmask.py  test_syntheticdata.py  test_text.py
