[metadata]
name = transformer
version = 0.0.1
author = Lukasz A. Bartnik
author_email = lbartnik@protonmail.com
description = Tranformer architecture along with unit tests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lbartnik/transformer
project_urls =
    Bug Tracker = https://github.com/lbartnik/transformer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
tests_require =
    pytest
    pytest-pythonpath

[options.packages.find]
where = src
